--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -23,7 +23,7 @@
                           <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
                         </div>
                         <div id="fs-form-quesito-new-btn">
-                                                  <%= link_to 'Elimina', { :action => 'quesito_destroy',:id=>@quesito_news.id }, :class => "fs-rosso-button", :confirm => 'Confermi la cancellazione del quesito?' %> &nbsp;
+                                                  <%= link_to 'Elimina', { :action => 'quesito_destroy',:id=>@quesito_news.id }, :class => "fs-blu-button", :confirm => 'Confermi la cancellazione del quesito?' %> &nbsp;
                           <%= submit_tag 'Salva le modifiche', :class => "fs-giallo-button", :confirm => 'Confermi le modifiche?' %> &nbsp;
                           <%= link_to('Indietro', quesiti_my_path, :class => "fs-blu-button") %>
                         </div>
