--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -68,9 +68,7 @@
 
       <p class="nodata"><%= l(:label_no_data) %></p>
       <br/>
-  <% end %>
+  <% end %><div class="clearfix"></div>
 </div>
-<%#sidebar a  destra %>
-<%= render :partial => 'blocco_sidebar1' %>
-<%#sidebar a destra %>
-<%# render :partial => 'blocco_sidebar2' %>
+
+
