--- a/app/views/editorial/quesiti_my.html.erb
+++ b/app/views/editorial/quesiti_my.html.erb
@@ -15,26 +15,28 @@
                   </div>
                   <div class="fs-quesiti-list">
                     <% case item.status_id when nil %>
-                        <div class='fs-quesiti-status-icon'></div>
+                       <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-0'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     <% when 1 %>
-                        <div class='fs-quesiti-status-icon fs-quesiti-status-1'><%= item.status_id %> </div>
+                      <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-1'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     <% when 2 %>
-                        <div class='fs-quesiti-status-icon fs-quesiti-status-2'><%= item.status_id %></div>
+                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-2'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     <% when 3 %>
-                        <div class='fs-quesiti-status-icon fs-quesiti-status-3'><%= item.status_id %></div>
-                    <% when 3 %>
-                        <div class='fs-quesiti-status-icon fs-quesiti-status-4'><%= item.status_id %></div>
+                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-3'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
+                    <% when 4 %>
+                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-4'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     <% else %>
                     <% end %>
                     <span> <%= link_to(h(item.summary), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %></span>
 
                     <p>
-                      <%= link_to(h(smart_truncate(item.description, 120)), :controller => 'editorial', :action => "evento", :id => item.id, :escape => false) %>
+                      <%= link_to(h(smart_truncate(item.description, 120)), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     </p>
-
+                     <!--
                     <div class="fs-btn-center">
                       <%= link_to "Visualizza", url_for(:controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false), :class => "fs-vuoto-inline2-button" %>
                     </div>
+                    -->
+                    <br /> &nbsp;
                   </div>
                   <div class="clearfix"></div>
                 </div>
