--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -23,7 +23,7 @@
                           <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
                         </div>
                         <div id="fs-form-quesito-new-btn">
-                                                  <%= link_to 'Elimina', { :action => 'quesito_destroy',:id=>@quesito_news.id }, :class => "fs-blu-button", :confirm => 'Confermi la cancellazione del quesito?' %> &nbsp;
+                                                  <%= link_to 'Elimina', { :action => 'quesito_destroy',:id=>@quesito_news.id }, :class => "fs-giallo-button", :confirm => 'Confermi la cancellazione del quesito?' %> &nbsp;
                           <%= submit_tag 'Salva le modifiche', :class => "fs-giallo-button", :confirm => 'Confermi le modifiche?' %> &nbsp;
                           <%= link_to('Indietro', quesiti_my_path, :class => "fs-blu-button") %>
                         </div>
@@ -70,10 +70,10 @@
                         </div>
                     <% end %>
 
-                <% when 3 %>  <!-- ACCETTATO -->
+                <% when 3 %>  <!-- ACCETTATO SENZA RISPOSTA -->
                               <div class="fs-quesiti-status-icon fs-quesiti-status-3"></div>
                     <h3>Il suo quesito è stato accettato ma non ha avuto ancora risposta.</h3>
-                    <p>Nelle prossime edizioni verranno pubblicati uno o più articoli che attinenti al suo quesito, grazie.</p>
+                    <p>Appena possibile le forniremo una risposta tramite uno o più articoli che trattano argomenti attinenti al suo quesito, grazie.</p>
                     <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
                         <div>
                           <label>Oggetto </label>
@@ -88,7 +88,17 @@
                         </div>
                     <% end %>
                 <% when 4 %> <!-- ACCETTATO CON RISPOSTA -->
-                    <h2><%= @quesito_news_stato_num.to_s %></h2>
+                    <div style="min-height:76px;">
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-4"></div>
+                       <h3>Il suo quesito è stato accettato ed ha avuto queste risposte.</h3>
+                       <% if @quesito_news.causale  %>
+                          <h5>La redazione : </h5>
+                       <p><%= @quesito_news.causale %>  </p>
+                           <% end %>
+                    </div>
+                       <%= render :partial => 'quesito', :locals => {:quesito_news => @quesito_news} %>
+                    <%= render :partial => 'articoli', :locals => {:issues => @quesito_issues , :issues_pages => 1, :issues_count => 2} %>
+                    <h4 > debug quanti articoli? = <%= @quesito_issues_count.to_s  %> </h4>
                 <% when 9 %> <!-- STATO NON DETERMINATO -->
                     <h2><%= @quesito_news_stato_num.to_s %></h2>
                 <% else %>
