--- a/app/views/news/_form.html.erb
+++ b/app/views/news/_form.html.erb
@@ -3,6 +3,13 @@
 <p><%= f.text_field :title, :required => true, :size => 60 %></p>
 <p><%= f.text_area :summary, :cols => 60, :rows => 2 %></p>
 <p><%= f.text_area :description, :required => true, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
+
+<% if @news.is_quesito? %>
+<h3 class="<%= @news.get_state_css %>"><%= @news.status_fs %></h3>
+<p><%= f.text_field :title, :required => true, :size => 60 %></p>
+<p><%= f.text_area :causale, :cols => 80, :rows => 4 %></p>
+<%= wikitoolbar_for 'news_causale' %>
 </div>
+<% end %>
 
 <%= wikitoolbar_for 'news_description' %>
