--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -241,6 +241,12 @@ div.issues h3 { background: url(../images/ticket.png) no-repeat 0% 50%; padding-
 div.members h3 { background: url(../images/group.png) no-repeat 0% 50%; padding-left: 20px; }
 div.news h3 { background: url(../images/news.png) no-repeat 0% 50%; padding-left: 20px; }
 div.projects h3 { background: url(../images/projects.png) no-repeat 0% 50%; padding-left: 20px; }
+.responses { background: url(../images/wiki_edit.png) no-repeat 0% 50%; padding-left: 20px; }
+.domand_wait { background: url(../images/time.png) no-repeat 0% 50%; padding-left: 20px; }
+.domand_ko { background: url(../images/task_late.png) no-repeat 0% 50%; padding-left: 20px; }
+.domand_ok { background: url(../images/task_done.png) no-repeat 0% 50%; padding-left: 20px; }
+.domand_x { background: url(../images/help.png) no-repeat 0% 50%; padding-left: 20px; }
+
 
 #watchers ul {margin: 0;  padding: 0;}
 #watchers li {list-style-type:none;margin: 0px 2px 0px 0px; padding: 0px 0px 0px 0px;}
