--- a/app/views/editorial/quesiti_my.html.erb
+++ b/app/views/editorial/quesiti_my.html.erb
@@ -6,37 +6,25 @@
       <% else %>
           <article class="fs-article fs-post-quesiti">
             <% if flash[:notice] %>
-                    <div id="fs-flash-notice"><%= notice %> </div>
-                     <% end %>
+                <div id="fs-flash-notice"><%= notice %> </div>
+            <% end %>
             <% @quesiti_news.each do |item| %>
                 <div class="fs-convegni-border">
                   <div class="fs-quesiti-data">
                     <span><%= I18n.localize(item.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
                   </div>
                   <div class="fs-quesiti-list">
-                    <% case item.status_id when nil %>
-                       <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-1'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
-                    <% when 1 %>
-                      <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-1'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
-                    <% when 2 %>
-                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-2'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
-                    <% when 3 %>
-                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-3'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
-                    <% when 4 %>
-                        <%= link_to(("<div class='fs-quesiti-status-icon fs-quesiti-status-4'></div>"), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
-                    <% else %>
-                    <% end %>
+                    <%= link_to(item.status_fs_icons_fe, :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     <span> <%= link_to(h(item.summary), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %></span>
-
                     <p>
                       <%= link_to(h(smart_truncate(item.description, 120)), :controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false) %>
                     </p>
-                     <!--
+                    <!--
                     <div class="fs-btn-center">
                       <%= link_to "Visualizza", url_for(:controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false), :class => "fs-vuoto-inline2-button" %>
                     </div>
                     -->
-                    <br /> &nbsp;
+                    <br/> &nbsp;
                   </div>
                   <div class="clearfix"></div>
                 </div>
