--- a/app/views/editorial/quesito_show_copy.html.erb
+++ b/app/views/editorial/quesito_show_copy.html.erb
@@ -7,8 +7,12 @@
               <div class="fs-layout-cell layout-item-0" style="width: 99%">
                 <% case @quesito_news_stato_num
                      when 1 %> <!--ATTESA / MODIFICABILE -->
-                  <%= @quesito_news.status_fs_icons_fe %>
-                    <%= @quesito_news.status_fs %>
+
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-0"></div>
+                    <h3>Il suo quesito verrà esaminato dalla redazione appena possibile.</h3>
+
+                    <p>Se lo desidera puo' eliminarlo oppure apportare modifiche</p>
+
                     <% form_tag({:controller => "editorial", :action => "quesito_edit", :id => @quesito_news.id, :method => "post"}, :class => "input", :id => "fs-quesito-new") do %>
                         <div>
                           <label>Oggetto </label>
@@ -26,8 +30,9 @@
                     <% end %>
                 <% when 2 %> <!-- RISPOSTA FAST -->
                     <div style="min-height:77px;">
-                      <%= @quesito_news.status_fs_icons_fe %>
-                      <%= @quesito_news.status_fs %>
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-2"></div>
+                    <h3>Abbiamo risposto al suo quesito.</h3>
+                      <p>Grazie per averci contattato.</p>
                       </div>
                     <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
                         <div>
@@ -48,8 +53,9 @@
                     <% end %>
 
                 <% when 3 %>  <!-- ACCETTATO SENZA RISPOSTA ARTICOLO -->
-                    <%= @quesito_news.status_fs_icons_fe %>
-                                          <%= @quesito_news.status_fs %>
+                              <div class="fs-quesiti-status-icon fs-quesiti-status-3"></div>
+                    <h3>Il suo quesito è stato accettato ma non ha avuto ancora risposta.</h3>
+                    <p>Appena possibile le forniremo una risposta tramite uno o più articoli che trattano argomenti attinenti al suo quesito, grazie.</p>
                     <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
                         <div>
                           <label>Oggetto </label>
@@ -64,19 +70,17 @@
                         </div>
                     <% end %>
                 <% when 4 %> <!-- ACCETTATO CON RISPOSTA ARTICOLO -->
-                    <%= @quesito_news.status_fs_icons_fe %>
-                                          <%= @quesito_news.status_fs %>
+                    <div style="min-height:76px;">
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-4"></div>
+                       <h3>Il suo quesito è stato accettato ed ha avuto queste risposte.</h3>
                        <% if @quesito_news.causale  %>
                           <h5>La redazione : </h5>
                        <p><%= @quesito_news.causale %>  </p>
                            <% end %>
-
+                    </div>
                        <%= render :partial => 'quesito', :locals => {:quesito_news => @quesito_news} %>
                     <%= render :partial => 'articoli', :locals => {:issues => @quesito_issues , :issues_pages => 1, :issues_count => 2} %>
                     <h4 > debug quanti articoli? = <%= @quesito_issues_count.to_s  %> </h4>
-
-                    <h1> debug quanti fs1? = <%= @quesito_news.public_fs1 %> </h1>
-                    <h1> debug quanti test_all_quesiti_fs? = <%= @quesito_news.test_all_quesiti_fs %> </h1>
                 <% when 9 %> <!-- STATO NON DETERMINATO -->
                     <h2><%= @quesito_news_stato_num.to_s %></h2>
                 <% else %>
