--- a/app/views/editorial/_quesito.html.erb
+++ b/app/views/editorial/_quesito.html.erb
@@ -1,12 +1,11 @@
 <article class="fs-article">
   <div class="fs-convegni-border">
-    <div class="fs-quesiti-data">
-     <span class="fs-quesiti-data-left">Quesito di:<%= User.current.firstname %> </span>
-      <span><%= I18n.localize(@quesito_news.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
+    <div class="fs-quesiti-data">  <span>
+     Quesito di: <%= @quesito_news.author.firstname %></span>
+      <span class="fs-quesiti-data-data"><%= I18n.localize(@quesito_news.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
     </div>
     <div class="fs-quesiti-wrapper">
-      <div class="fs-quesiti-gravatar">qui gravatar for user che ha
-        creato <%# gravatar_for(@quesito_news.firstname) unless !@quesito_news.firstname %>
+      <div class="fs-quesiti-gravatar"> <%= gravatar_for(@quesito_news.author) unless !@quesito_news.author %>
       </div>
       <span style="font-weight: bold;"><%= @quesito_news.summary %> </span>
 
